--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-jenkins-app",
+  "name": "jenkins",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,19 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.39.0",
-    "@types/node": "^20.8.6"
-  },
-  "jest-junit": {
-    "suiteName": "jest tests",
-    "outputDirectory": "test-results",
-    "outputName": "junit.xml",
-    "uniqueOutputName": "false",
-    "classNameTemplate": "{classname}-{title}",
-    "titleTemplate": "{classname}-{title}",
-    "ancestorSeparator": " › ",
-    "usePathForSuiteName": "true"
   }
 }
